--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth_web: ^0.1.3+1
   firebase_core_web: ^0.1.1+2
   cloud_firestore_web: ^0.1.1+2
+  dio: ^3.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
