--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core_web: ^0.1.1+2
   cloud_firestore_web: ^0.1.1+2
   dio: ^3.0.9
+  flutter_bloc: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
