--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   flutter_bloc: ^4.0.0
   flutter_counter: 1.0.3
   intl: ^0.16.1
+  flutter_datetime_picker: ^1.3.8
+  datetime_picker_formfield: ^1.0.0
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
