--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,7 @@ dependencies:
   flutter_bloc: ^4.0.0
   flutter_counter: 1.0.3
   intl: ^0.16.1
-  flutter_datetime_picker: ^1.3.8
-  datetime_picker_formfield: ^1.0.0
-  flutter_localizations:
-    sdk: flutter
+  datetime_picker_formfield: 1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,6 +45,8 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
